=================
Version 1.3.0.0
=================

New Features:
- Added support for Lua scripts. Scene and notification scripts can load and
  run Lua scripts instead of JS. the script types can be mixed in a Project
  at will.
- Resources can be tagged. Those tags can be used in scripts for custom logic.

Changes:
- Code Editor supports Lua highlighting, code generation and debugging.

Fixed Bugs:
- Fixed an error message in PlayerMediaPlayer that was reporting the wrong function call.

=================
Version 1.2.6.0
=================

Fixed Bugs:
- Fixed the "mute" setting not muting Audio Resources in a JOIP-Project.
- Crashfix for certain unusual screen configurations.
- Crashfix for trying to enter an empty Kink.
- Fixed Kinks not being removable via "x" button.

=================
Version 1.2.5.0
=================

Changes:
- Updated tutorial to account for EOS scripts.
- Title Card decoration in Resource Detail View does not take away space
  from the actual image and is instead drawn over the image in the top
  left corner.

Fixed Bugs:
- Fixed initially opened script contents not showing in the Script Editor
  on application launch.
- Fixed the file browser opening outside the Project folder when trying to
  create a new script.
- Fixed desktop styles missing some updates that are present in Android
  version.

=================
Version 1.2.4.0
=================

Changes:
- Removed advanced settings page on Android, because it was empty anyways.
- Inverted Changelog order so players can see the new changes without scrolling
  down for an hour.

Fixed Bugs:
- Fixed crash on Android when trying to obtain screen size

=================
Version 1.2.3.0
=================

New Features:
- Added a new "Show in Explorer" option to the context menu in the Resource Tree.

Changes:
- EOS script files have a new graphical editor similar to the Milovana editor.
- Project Describtion can be edited in a new richtext editor.